# libgettextdemo

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  libgettextdemo.pc.in  run-me.sh  test.c
libgettextdemo/: Makefile.am  libgettextdemo.c  libgettextdemo.h
po/: LINGUAS  Makevars  POTFILES.in  ar.po  ca.po  cs.po  de.po  es.po  et.po  fa.po  fi.po  fr.po  hi.po  hu.po  id.po  it.po  ja.po  ko.po  libgettextdemo.pot  linguas-update  nl.po  nn.po  pl.po  pt_BR.po  ru.po  si.po  sv.po  uk.po  zh_CN.po  zh_TW.po
